src/objects/Sales_Leave_Applications__c.object
<CustomObject>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <description>Name of the Applicant</description>
        <inlineHelpText>Name of the Applicant</inlineHelpText>
        <label>Applicant Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <description>Status of Application</description>
        <inlineHelpText>Status of Application</inlineHelpText>
        <label>Current Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Application__c</fullName>
        <description>Date of Application</description>
        <label>Date of Application</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Status__c</fullName>
        <description>Final Status of Application</description>
        <inlineHelpText>Final Status of Application</inlineHelpText>
        <label>Final Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leave_Days__c</fullName>
        <description>How Many days of Leave</description>
        <inlineHelpText>How Many days of Leave</inlineHelpText>
        <label>Leave Days</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason for Leave</description>
        <inlineHelpText>Reason for Leave</inlineHelpText>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Submitted_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True :  if successfully submitted
False : if not submitted</description>
        <inlineHelpText>True :  if successfully submitted
False : if not submitted</inlineHelpText>
        <label>Submitted for Approval</label>
        <type>Checkbox</type>
    </fields>
    <label>Sales Leave Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APL_{0000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Leave Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VL_Date_of_application</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( Date_of_Application__c ),NOT( $Setup.Bypass_Logic__c.Bypass_Validation_Rules__c ))</errorConditionFormula>
        <errorDisplayField>Date_of_Application__c</errorDisplayField>
        <errorMessage>Date should be mentioned</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VL_Only_one_User_can_fill</fullName>
        <active>true</active>
        <description>Only Sales intern can populate thsi field</description>
        <errorConditionFormula>NOT($User.Id  = &quot;005Qy000009loSQ&quot;)</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>You can&apos;t populate this field</errorMessage>
    </validationRules>
</CustomObject>